etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_volumes.snap
---
source: etl-api/src/k8s/http.rs
expression: volumes
---
[
  {
    "configMap": {
      "name": "abcdefghijklmnopqrst-42-replicator-config"
    },
    "name": "replicator-config-file"
  }
]
